# kedro_mlflow_tutorial

./: Makefile  README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters_ml_app.yml
notebooks/: demo.ipynb
src/kedro_mlflow_tutorial/: __init__.py  settings.py
src/kedro_mlflow_tutorial/pipelines/etl_app/: __init__.py  nodes.py  pipeline.py
src/kedro_mlflow_tutorial/pipelines/ml_app/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py  test_whole_regression_inference_pipeline.py
tests/pipelines/ml_app/: test_pipeline.py
